--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html{
     box-sizing: border-box;
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 *,
@@ -13,7 +15,6 @@ html{
 
 body {
     align-items: center;
-    background: linear-gradient(320deg, #c792eb, rgb(84, 0, 136), rgb(51, 153, 204));
     display: flex;
     font-family: Arial, Helvetica, sans-serif;
     font-display: swap;
@@ -24,14 +25,13 @@ body {
 .main {
     backdrop-filter: blur(5.5px);
     -webkit-backdrop-filter: blur(5.5px);
-    background: rgba(255,255,255,0.75);
-    border: 1px solid rgba(255,255,255,0.01);
+    border: 1px solid rgba(255, 255, 255, 0.01);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(35,35,35,0.1);
     color: #232323;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
-    background: rgba(255,255,255,0.30);
+    background: rgba(0, 0, 0, 0.9);
     border: 1px solid rgba(255,255,255, 0.34);
     flex-basis: 400px;
     height: 540px;
@@ -41,10 +41,10 @@ body {
 .screen {
     backdrop-filter: blur(5.5px);
     -webkit-backdrop-filter: blur(5.5px);
-    background: rgba(255,255,255, 0.75);
-    border: 1px solid rgba(255,255,255,0.01);
+    background: rgba(255, 255, 255, 1);
+    border: 1px solid rgba(255, 255, 255, 0.01);
     border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(35, 35, 35, 0.1);
+    box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
     color: #232323;
     font-size: 35px;
     overflow: auto;
@@ -62,7 +62,7 @@ body {
 .calc-butt {
     backdrop-filter: blur(5.5px);
     -webkit-backdrop-filter: blur(5.5px);
-    background: rgba(255,255,255,0.75);
+    background: rgba(255,255,255,1);
     border: 1px solid rgba(255,255,255,0.01);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(35,35,35,0.1);
@@ -76,25 +76,24 @@ body {
 .calc-butt:last-child {
     backdrop-filter: blur(5.5px);
     -webkit-backdrop-filter: blur(5.5px);
-    background: rgba(255,255,255,0.75);
+    background: rgba(255,255,255,1);
     border: 1px solid rgba(255,255,255,0.01);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(35,35,35,0.1);
     color: #fff;
-    background: #d72880;
+    background: #d72828;
 }
 
 .calc-butt:last-child:hover {
-    background-color: inherit;
-    color: inherit;
+    background: rgb(103, 103, 103);
 }
 
 .calc-butt:hover {
-    background-color: inherit;
+    background: rgb(103, 103, 103);
 }
 
 .calc-butt:active {
-    background-color: #ffef78;
+    background-color: #ffffff;
 }
 
 .double {
